feat(kafka): publish per-product ODPS YAML with x-org-id header to descriptors topic
Replaces the ZIP-bytes publish (keyed by filename, header-less) that the
Control Center's SpecIngestConsumer could never ingest. Value is now the
product's ODPS YAML as UTF-8, key = ODPS product id, x-org-id header from
the new --org-id / X_ORG_ID config — required whenever Kafka is configured
(fail closed; CC drops header-less records to event_log). Raw-ZIP file mode
no longer publishes to the descriptors topic.

Closes #45

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NtkK1pZGpASEyCj2aJqq74